<resources>
    <string name="Settings_background_music">Background music</string>
    <string name="Settings_background_volume">Background music volume</string>
    <string name="Settings_sound">Enable sound in game</string>
    <string name="Settings_sounds_text">Enable sounds, set up different sound effects</string>
    <string name="Settings_sounds_title">Sounds</string>
    <string name="Settings_win_sound_title">Winning sound effect</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="default_background_music">1</string>
    <string name="default_canfield_size_of_reserve">13</string>
    <string name="default_fortyeight_number_of_recycles">1</string>
    <string name="default_klondike_number_of_recycles">3</string>
    <string name="default_movement_speed">2</string>
    <string name="default_pyramid_number_of_recycles">2</string>
    <string name="default_vegas_number_of_recycles">0</string>
    <string name="default_win_sound">0</string>
    <string name="game_cancel">Cancel</string>
    <string name="game_confirm">Confirm</string>
    <string name="games_Calculation">Calculation</string>
    <string name="games_Canfield">Canfield</string>
    <string name="games_FortyEight">Forty&amp;Eight</string>
    <string name="games_Golf">Golf</string>
    <string name="games_Klondike">Klondike</string>
    <string name="games_Pyramid">Pyramid</string>
    <string name="games_Spider">Spider</string>
    <string name="games_Vegas">Vegas</string>
    <string name="games_Yukon">Yukon</string>
    <string name="games_mod3">Mod3</string>
    <string name="manual_ui">User interface</string>
    <string name="pref_key_4_color_mode">pref_key_4_color_mode</string>
    <string name="pref_key_auto_start_new_game">pref_key_auto_start_new_game</string>
    <string name="pref_key_background_color">pref_key_background_color</string>
    <string name="pref_key_background_music">pref_key_background_music</string>
    <string name="pref_key_background_volume">pref_key_background_volume</string>
    <string name="pref_key_canfield_draw">pref_key_canfield_draw</string>
    <string name="pref_key_canfield_size_of_reserve">pref_key_canfield_size_of_reserve</string>
    <string name="pref_key_cards">pref_key_cards</string>
    <string name="pref_key_cards_background">pref_key_cards_background_new</string>
    <string name="pref_key_developer_option_deal_correct_sequences">pref_key_developer_option_deal_correct_sequences</string>
    <string name="pref_key_developer_option_instant_win">pref_key_developer_option_instant_win</string>
    <string name="pref_key_developer_option_move_cards_everywhere">pref_key_developer_option_move_cards_everywhere</string>
    <string name="pref_key_developer_option_no_saving">pref_key_developer_option_no_saving</string>
    <string name="pref_key_developer_option_play_every_card">pref_key_developer_option_play_every_card</string>
    <string name="pref_key_force_tablet_layout">pref_key_force_tablet_layout</string>
    <string name="pref_key_fortyeight_limit_recycles">pref_key_fortyeight_limit_recycles</string>
    <string name="pref_key_fortyeight_number_of_recycles">pref_key_fortyeight_number_of_recycles</string>
    <string name="pref_key_hide_score">pref_key_hide_score</string>
    <string name="pref_key_hide_status_bar">pref_key_hide_status_bar</string>
    <string name="pref_key_hide_time">pref_key_hide_time</string>
    <string name="pref_key_klondike_draw">pref_key_klondike_draw</string>
    <string name="pref_key_klondike_limit_recycles">pref_key_klondike_limit_recycles</string>
    <string name="pref_key_klondike_number_of_recycles">pref_key_klondike_number_of_recycles</string>
    <string name="pref_key_language">pref_key_language</string>
    <string name="pref_key_left_handed_mode">pref_key_left_handed_mode</string>
    <string name="pref_key_max_number_undos">pref_key_max_number_undos</string>
    <string name="pref_key_menu_bar_position">pref_key_menu_bar_position</string>
    <string name="pref_key_menu_columns">pref_key_menu_columns</string>
    <string name="pref_key_menu_games">pref_key_menu_games</string>
    <string name="pref_key_menu_order">pref_key_menu_order</string>
    <string name="pref_key_movement_speed">pref_key_movement_speed</string>
    <string name="pref_key_orientation">pref_key_orientation</string>
    <string name="pref_key_pyramid_auto_move">pref_key_pyramid_auto_move</string>
    <string name="pref_key_pyramid_difficulty">pref_key_pyramid_difficult</string>
    <string name="pref_key_pyramid_limit_recycles">pref_key_pyramid_limit_recycles</string>
    <string name="pref_key_pyramid_number_of_recycles">pref_key_pyramid_number_of_recycles</string>
    <string name="pref_key_show_advanced_settings">pref_key_show_expert_settings</string>
    <string name="pref_key_sound_enabled">pref_key_sound_enabled</string>
    <string name="pref_key_start_menu">pref_key_start_menu</string>
    <string name="pref_key_use_true_randomisation">pref_key_use_true_randomisation</string>
    <string name="pref_key_vegas_bet_amount">pref_key_vegas_bet_amount_v2</string>
    <string name="pref_key_vegas_draw">pref_key_vegas_draw</string>
    <string name="pref_key_vegas_money_enabled">pref_key_vegas_money_enabled</string>
    <string name="pref_key_vegas_number_of_recycles">pref_key_vegas_number_of_recycles</string>
    <string name="pref_key_vegas_reset_money">pref_key_vegas_reset_money</string>
    <string name="pref_key_win_sound">pref_key_win_sound</string>
    <string name="settings_4_color_mode_text">Change the colors from Clubs to green and from diamonds to blue</string>
    <string name="settings_4_color_mode_title">4 color decks</string>
    <string name="settings_additional_movements">Additional card movements</string>
    <string name="settings_additional_movements_description">Enable and disable double-tap and other movement methods</string>
    <string name="settings_auto_move_title">Automatic movement</string>
    <string name="settings_auto_start_new_game_text">If returned to an already won game, automatically start a new game</string>
    <string name="settings_auto_start_new_game_title">Start a new game when won</string>
    <string name="settings_background_color">Background colour</string>
    <string name="settings_background_color_custom">Custom</string>
    <string name="settings_canfield_draw">Number of cards to draw</string>
    <string name="settings_canfield_size_of_reserve_title">Change size of reserve (easier)</string>
    <string name="settings_cards">Cards</string>
    <string name="settings_cards_back">Card backgrounds</string>
    <string name="settings_change_language">Change language</string>
    <string name="settings_customization">Appearance</string>
    <string name="settings_customization_description">Customize cards, backgrounds and user interface</string>
    <string name="settings_developer_options_deal_correct_sequences_title">Deal correct sequences</string>
    <string name="settings_developer_options_instant_win_text">Win every game after moving a card</string>
    <string name="settings_developer_options_instant_win_title">Instant win</string>
    <string name="settings_developer_options_lock_text">These settings are intended for testing purpose only, the usage can result in strange behavior and crashes!</string>
    <string name="settings_developer_options_move_card_everwhere_text">You can place cards on any stack</string>
    <string name="settings_developer_options_move_card_everwhere_title">Move cards everywhere</string>
    <string name="settings_developer_options_no_saving_text">"Movements in a game won't be saved anymore"</string>
    <string name="settings_developer_options_no_saving_title">Disable saving game state</string>
    <string name="settings_developer_options_play_every_card_text">You can play every revealed card</string>
    <string name="settings_developer_options_play_every_card_title">Play every card</string>
    <string name="settings_force_tablet_layout_text">Show the application as on large screens (≥7\")</string>
    <string name="settings_force_tablet_layout_title">Force tablet layout</string>
    <string name="settings_games">Games</string>
    <string name="settings_games_description">Set preferences for the game variants</string>
    <string name="settings_hide_score">Hide Score</string>
    <string name="settings_hide_status_bar">Hide status bar</string>
    <string name="settings_hide_time">Hide Time</string>
    <string name="settings_klondike_draw">Number of cards to draw</string>
    <string name="settings_landscape">Landscape</string>
    <string name="settings_left_handed_mode">Left handed mode</string>
    <string name="settings_left_handed_mode_description">Mirrors the card and stack positions to the left side</string>
    <string name="settings_limit_number_of_recycles">Limit number of recycles</string>
    <string name="settings_limit_number_of_recycles_text">Recycling the waste back to the main stack is limited</string>
    <string name="settings_max_number_undos">Maximum amount of undo movements</string>
    <string name="settings_menu">Main menu</string>
    <string name="settings_menu_bar_position">Menu bar position</string>
    <string name="settings_menu_bar_position_bottom">Bottom</string>
    <string name="settings_menu_bar_position_left">Left</string>
    <string name="settings_menu_bar_position_right">Right</string>
    <string name="settings_menu_bar_position_top">Top</string>
    <string name="settings_menu_columns">Number of columns</string>
    <string name="settings_menu_description">Change number of columns, show and hide games</string>
    <string name="settings_menu_games">Show and hide games</string>
    <string name="settings_menu_games_description">Select which games are shown in the menu</string>
    <string name="settings_menu_order_summary">Long click an entry, then use drag and drop to reorder the menu entries</string>
    <string name="settings_menu_order_title">Menu order</string>
    <string name="settings_money">Money</string>
    <string name="settings_movement_speed">Card movement speed</string>
    <string name="settings_number_of_recycles">Amount of recycles</string>
    <string name="settings_orientation">Screen orientation</string>
    <string name="settings_other">General</string>
    <string name="settings_other_description">Set all other settings</string>
    <string name="settings_portrait">Portrait</string>
    <string name="settings_pyramid_auto_move_text">Automatically move Kings to the waste, when possible</string>
    <string name="settings_pyramid_difficulty">Difficulty</string>
    <string name="settings_rules">Rules</string>
    <string name="settings_show_advanced_settings">Show advanced settings</string>
    <string name="settings_show_advanced_settings_text">Unlock the expert and developer categories</string>
    <string name="settings_show_main_menu">Start to main menu</string>
    <string name="settings_show_main_menu_description">Do not enter the last played game on start</string>
    <string name="settings_support">Support</string>
    <string name="settings_use_true_randomisation_text">The default randomization avoids similar cards next to each other. Check this to enable a truly uniform randomisation</string>
    <string name="settings_use_true_randomisation_title">Use true randomization</string>
    <string name="settings_vegas_bet_amount">Bet Amount</string>
    <string name="settings_vegas_money_enabled">Keep the current balance</string>
    <string name="settings_vegas_money_enabled_text">The balance will be transferred to following deals of Vegas, but you need to reset the balance and then start a new game for saving high-scores</string>
    <string name="settings_vegas_money_reset">Reset balance</string>
    <string name="settings_vegas_money_reset_text">The next Vegas deal will start with 0$</string>
</resources>