<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_cards">
        <de.tobiasbielefeld.solitaire.classes.ListPreferenceWithSummary android:entries="@array/pref_draw_titles" android:title="@string/settings_klondike_draw" android:key="@string/pref_key_vegas_draw" android:summary="%s" android:defaultValue="3" android:positiveButtonText="@null" android:negativeButtonText="@string/game_cancel" android:entryValues="@array/pref_draw_values" />
        <de.tobiasbielefeld.solitaire.classes.ListPreferenceWithSummary android:entries="@array/pref_number_of_recycles_values" android:title="@string/settings_number_of_recycles" android:key="@string/pref_key_vegas_number_of_recycles" android:summary="%s" android:defaultValue="@string/default_vegas_number_of_recycles" android:positiveButtonText="@null" android:negativeButtonText="@string/game_cancel" android:entryValues="@array/pref_number_of_recycles_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_money">
        <de.tobiasbielefeld.solitaire.dialogs.DialogPreferenceVegasBetAmount android:title="@string/settings_vegas_bet_amount" android:key="@string/pref_key_vegas_bet_amount" android:summary="" android:positiveButtonText="@string/game_confirm" android:negativeButtonText="@string/game_cancel" />
        <CheckBoxPreference android:title="@string/settings_vegas_money_enabled" android:key="@string/pref_key_vegas_money_enabled" android:summary="@string/settings_vegas_money_enabled_text" android:defaultValue="@bool/default_vegas_money_enabled" />
        <de.tobiasbielefeld.solitaire.dialogs.DialogPreferenceVegasResetMoney android:title="@string/settings_vegas_money_reset" android:key="@string/pref_key_vegas_reset_money" android:summary="@string/settings_vegas_money_reset_text" android:dependency="@string/pref_key_vegas_money_enabled" android:positiveButtonText="@string/game_confirm" android:negativeButtonText="@string/game_cancel" />
    </PreferenceCategory>
</PreferenceScreen>