<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/settings_customization" android:summary="@string/settings_customization_description" android:fragment="de.tobiasbielefeld.solitaire.ui.settings.Settings$CustomizationPreferenceFragment" />
    <header android:title="@string/settings_menu" android:summary="@string/settings_menu_description" android:fragment="de.tobiasbielefeld.solitaire.ui.settings.Settings$MenuPreferenceFragment" />
    <header android:title="@string/settings_games" android:summary="@string/settings_games_description">
        <intent android:targetPackage="de.tobiasbielefeld.solitaire" android:targetClass="de.tobiasbielefeld.solitaire.ui.settings.SettingsGames" />
    </header>
    <header android:title="@string/Settings_sounds_title" android:summary="@string/Settings_sounds_text" android:fragment="de.tobiasbielefeld.solitaire.ui.settings.Settings$SoundPreferenceFragment" />
    <header android:title="@string/settings_additional_movements" android:summary="@string/settings_additional_movements_description" android:fragment="de.tobiasbielefeld.solitaire.ui.settings.Settings$AdditionalMovementsPreferenceFragment" />
    <header android:title="@string/settings_other" android:summary="@string/settings_other_description" android:fragment="de.tobiasbielefeld.solitaire.ui.settings.Settings$OtherPreferenceFragment" />
</preference-headers>