<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <de.tobiasbielefeld.solitaire.dialogs.DialogPreferenceMenuOrder android:title="@string/settings_menu_order_title" android:key="@string/pref_key_menu_order" android:summary="@string/settings_menu_order_summary" android:positiveButtonText="@string/game_confirm" android:negativeButtonText="@string/game_cancel" />
    <de.tobiasbielefeld.solitaire.dialogs.DialogPreferenceMenuHideGames android:title="@string/settings_menu_games" android:key="@string/pref_key_menu_games" android:summary="@string/settings_menu_games_description" android:positiveButtonText="@string/game_confirm" android:negativeButtonText="@string/game_cancel" />
    <de.tobiasbielefeld.solitaire.dialogs.DialogPreferenceMenuRows android:title="@string/settings_menu_columns" android:key="@string/pref_key_menu_columns" android:summary="Portrait: 3, Landscape: 4" android:positiveButtonText="@string/game_confirm" android:negativeButtonText="@string/game_cancel" />
</PreferenceScreen>