<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_cards">
        <de.tobiasbielefeld.solitaire.classes.ListPreferenceWithSummary android:entries="@array/pref_draw_titles" android:title="@string/settings_klondike_draw" android:key="@string/pref_key_klondike_draw" android:summary="%s" android:defaultValue="1" android:positiveButtonText="@null" android:negativeButtonText="@string/game_cancel" android:entryValues="@array/pref_draw_values" />
        <CheckBoxPreference android:title="@string/settings_limit_number_of_recycles" android:key="@string/pref_key_klondike_limit_recycles" android:summary="@string/settings_limit_number_of_recycles_text" android:defaultValue="@bool/default_klondike_limited_recycles" />
        <de.tobiasbielefeld.solitaire.classes.ListPreferenceWithSummary android:entries="@array/pref_number_of_recycles_values" android:title="@string/settings_number_of_recycles" android:key="@string/pref_key_klondike_number_of_recycles" android:summary="%s" android:dependency="@string/pref_key_klondike_limit_recycles" android:defaultValue="@string/default_klondike_number_of_recycles" android:positiveButtonText="@null" android:negativeButtonText="@string/game_cancel" android:entryValues="@array/pref_number_of_recycles_values" />
    </PreferenceCategory>
</PreferenceScreen>