<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_cards">
        <de.tobiasbielefeld.solitaire.classes.ListPreferenceWithSummary android:entries="@array/pref_draw_titles" android:title="@string/settings_canfield_draw" android:key="@string/pref_key_canfield_draw" android:summary="%s" android:defaultValue="3" android:positiveButtonText="@null" android:negativeButtonText="@string/game_cancel" android:entryValues="@array/pref_draw_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_rules">
        <de.tobiasbielefeld.solitaire.classes.ListPreferenceWithSummary android:entries="@array/pref_canfield_size_of_reserve_titles" android:title="@string/settings_canfield_size_of_reserve_title" android:key="@string/pref_key_canfield_size_of_reserve" android:summary="%s" android:defaultValue="@string/default_canfield_size_of_reserve" android:positiveButtonText="@null" android:negativeButtonText="@string/game_cancel" android:entryValues="@array/pref_canfield_size_of_reserve_values" />
    </PreferenceCategory>
</PreferenceScreen>