<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip">
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_portrait" />
        <RadioGroup android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RadioButton android:id="@id/dialog_button_portrait_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_menu_bar_position_top" android:layout_weight="1.0" />
            <RadioButton android:id="@id/dialog_button_portrait_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_menu_bar_position_bottom" android:layout_weight="1.0" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_landscape" />
        <RadioGroup android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RadioButton android:id="@id/dialog_button_landscape_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_menu_bar_position_left" android:layout_weight="1.0" />
            <RadioButton android:id="@id/dialog_button_landscape_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_menu_bar_position_right" android:layout_weight="1.0" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>